force-app/main/default/objects/Contact/fields/Last_Tweet_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Tweet_Post_Date__c</fullName>
    <label>Last Tweet Post Date</label>
    <type>DateTime</type>
</CustomField>