force-app/main/default/objects/Contact/fields/Twitter_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Access_Token__c</fullName>
    <label>Twitter Access Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>