force-app/main/default/objects/Contact/fields/Twitter_Access_Token_OAuth1__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Access_Token_OAuth1__c</fullName>
    <label>Twitter Access Token OAuth1</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>