force-app/main/default/objects/Contact/fields/Twitter_Access_Token_Refresh_Time__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Access_Token_Refresh_Time__c</fullName>
    <label>Twitter Access Token Refresh Time</label>
    <type>DateTime</type>
</CustomField>