force-app/main/default/objects/Contact/fields/Twitter_Id__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Id__c</fullName>
    <label>Twitter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>