force-app/main/default/objects/Contact/fields/Twitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Name__c</fullName>
    <label>Twitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>