force-app/main/default/objects/Contact/fields/Twitter_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Refresh_Token__c</fullName>
    <label>Twitter Refresh Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>